<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <com.app.faizanzw.customui.CustomTextViewUi
                        android:id="@+id/edtStDate"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:maxLength="80"
                        android:visibility="visible"
                        android:maxLines="1"
                        app:hint="@string/start_date"
                        app:title="" />

                    <com.app.faizanzw.customui.CustomTextViewUi
                        android:id="@+id/edtEDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="80"
                        android:layout_weight="1"
                        android:visibility="visible"
                        android:maxLines="1"
                        app:hint="@string/end_date"
                        app:title="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:orientation="vertical">

                    <com.app.faizanzw.customui.CustomSpinnerUi
                        android:id="@+id/spnType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        app:hint="@string/task_type1"
                        app:title="" />

                    <com.app.faizanzw.customui.CustomSpinnerUi
                        android:id="@+id/spnStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center"
                        app:hint="@string/task_status"
                        app:title="" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAllowToShow"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:orientation="vertical">

                    <com.app.faizanzw.customui.CustomSpinnerUi
                        android:id="@+id/spnBanch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_gravity="center"
                        app:hint="@string/branch_dropdown"
                        app:title="" />

                    <com.app.faizanzw.customui.CustomSpinnerUi
                        android:id="@+id/spnEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center"
                        app:hint="@string/employee_dropdown"
                        app:title="" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSearch"
                    style="@style/btnBlueSquare"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:text="@string/search"
                    android:layout_weight="0.6"
                    android:layout_height="@dimen/_42sdp"
                    android:textSize="@dimen/_11sdp"
                    android:padding="0dp"
                    app:backgroundTint="@color/color_primary" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_45sdp"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/txtNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="No Items Found" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>