<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_15sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <com.app.faizanzw.customui.CustomLabelUI
                android:id="@+id/edtExpenseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                app:hint="@string/task_no"
                app:title="" />

            <com.app.faizanzw.customui.CustomLabelUI
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1"
                app:hint="Date"
                app:title="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.app.faizanzw.customui.CustomLabelUI
                android:id="@+id/spnTaskType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hint="Task Type"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                app:title="" />

            <com.app.faizanzw.customui.CustomLabelUI
                android:id="@+id/txtPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_weight="1"
                app:title=""
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:hint="@string/task_priority" />

        </LinearLayout>


        <com.app.faizanzw.customui.CustomLabelUI
            android:id="@+id/edtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:inputType="text"
            android:maxLines="1"
            app:hint="Subject"
            app:title="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.faizanzw.customui.CustomLabelUI
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_15sdp"
            app:title=""
            app:hint="@string/task_status" />

        <com.app.faizanzw.customui.CustomLabelUI
            android:id="@+id/txtWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:title="WebView"
            app:hint="Link" />

    </LinearLayout>


        <com.app.faizanzw.customui.CustomLabelUI
            android:id="@+id/txtRemarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:title=""
            app:hint="@string/remarks" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccept"
            style="@style/btnBlueSquare"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="ACCEPT"
            android:visibility="gone"
            app:backgroundTint="@color/color_primary" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
