<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_restaurant_details_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:expandedTitleMarginStart="12dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:layout_marginTop="@dimen/_65sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.app.faizanzw.customui.CustomEditText
                                android:id="@+id/edtStartDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:inputType="textMultiLine"
                                android:maxLength="150"
                                android:layout_marginEnd="@dimen/_2sdp"
                                android:layout_weight="1"
                                android:maxLines="3"
                                app:hint="@string/start_date"
                                app:title="" />

                            <com.app.faizanzw.customui.CustomEditText
                                android:id="@+id/edtEndDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:inputType="textMultiLine"
                                android:maxLength="150"
                                android:maxLines="3"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:layout_weight="1"
                                app:hint="@string/end_date"
                                app:title="" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <com.app.faizanzw.customui.CustomSpinnerUi
                                android:id="@+id/SpnPayee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:layout_gravity="center"
                                app:hint="@string/payment_to"
                                app:title="" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnSignIn"
                                style="@style/btnBlueSquare"
                                android:layout_marginHorizontal="@dimen/_15sdp"
                                android:text="@string/search_task"
                                android:layout_weight="0.6"
                                android:layout_height="@dimen/_39sdp"
                                android:textSize="@dimen/_11sdp"
                                android:padding="0dp"
                                app:backgroundTint="@color/color_primary" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_45sdp"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/txtNoData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="No Items Found" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>